# spacewalk

./: .gitignore  Cargo.toml  Cargo_CI.toml  README.md  keys.json  metadata-standalone.scale  metadata.scale  rust-toolchain.toml  secret_key_foucoco  zepter.yaml
clients/bitcoin/: Cargo.toml
clients/runner/: Cargo.toml
clients/runner/src/: error.rs  main.rs  runner.rs
clients/runtime/: Cargo.toml  build.rs  metadata-90.scale  metadata-parachain-amplitude.json  metadata-parachain-amplitude.scale  metadata-parachain-foucoco.json  metadata-parachain-foucoco.scale  metadata-parachain-pendulum.json  metadata-parachain-pendulum.scale  metadata-parachain.scale  metadata-standalone-explicit.json  metadata-standalone.json  metadata-standalone.scale
clients/runtime/client/: Cargo.toml  README.md
clients/runtime/client/src/: lib.rs
clients/runtime/examples/: send_via_subxt.rs
clients/runtime/src/: assets.rs  cli.rs  conn.rs  error.rs  extrinsic_params.rs  lib.rs  params.rs  retry.rs  rpc.rs  shutdown.rs  tests.rs  types.rs
clients/runtime/src/integration/: mod.rs
clients/service/: Cargo.toml
clients/service/src/: cli.rs  error.rs  lib.rs  trace.rs
clients/stellar-relay/: Cargo.toml  README.md
clients/stellar-relay-lib/: Cargo.toml  README.md
clients/stellar-relay-lib/examples/: connect.rs
clients/stellar-relay-lib/resources/: stellar_relay_config_mainnet_iowa.json  stellar_relay_config_testnet.json
clients/stellar-relay-lib/resources/secretkey/: stellar_secretkey_mainnet
clients/stellar-relay-lib/src/: config.rs  lib.rs  overlay.rs
clients/stellar-relay-lib/src/connection/: error.rs  errors.rs  flow_controller.rs  handshake.rs  helper.rs  hmac.rs  mod.rs  overlay_connection.rs  services.rs  xdr_converter.rs
clients/stellar-relay-lib/src/node/: local.rs  mod.rs  remote.rs
clients/stellar-relay-lib/src/tests/: mod.rs
clients/stellar-relay/examples/: connect.rs
clients/stellar-relay/src/: lib.rs
clients/stellar-relay/src/connection/: errors.rs  flow_controller.rs  handshake.rs  helper.rs  hmac.rs  mod.rs  overlay_connection.rs  services.rs  user_controls.rs  xdr_converter.rs
clients/stellar-relay/src/node/: local.rs  mod.rs  remote.rs
clients/stellar-relay/src/tests/: mod.rs
clients/vault/: .gitignore  Cargo.toml  README.md
clients/vault/examples/: oracle.rs
clients/vault/resources/config/: stellar_relay_config_mainnet_frankfurt.json  stellar_relay_config_mainnet_singapore.json  stellar_relay_config_testnet.json
clients/vault/resources/samples/: generalized_tx_set  tx_set
clients/vault/scripts/: run_parachain_node.sh
clients/vault/src/: cancellation.rs  deposit.rs  error.rs  execution.rs  horizon.rs  issue.rs  lib.rs  main.rs  metrics.rs  process.rs  redeem.rs  replace.rs  stellar_oracle.rs  stellar_wallet.rs  system.rs
clients/vault/tests/: vault_integration_tests.rs
clients/wallet/: Cargo.toml
clients/wallet/src/: cache.rs  error.rs  horizon.rs  keys.rs  lib.rs  mock.rs  operations.rs  resubmissions.rs  stellar_wallet.rs  task.rs  types.rs
crates/spacewalk/: Cargo.toml
crates/spacewalk/src/: address_conv.rs  currency_conv.rs  lib.rs  mock.rs  tests.rs
crates/stellar/: Cargo.toml  README.md
crates/stellar/examples/: parse-transaction.rs  run-proof.rs
crates/stellar/src/: balance_conv.rs  currency_conv.rs  horizon.rs  lib.rs  utils.rs
pallets/clients-info/: Cargo.toml  README.md
pallets/clients-info/src/: benchmarking.rs  default_weights.rs  lib.rs  mock.rs  tests.rs
pallets/currency/: Cargo.toml
pallets/currency/src/: amount.rs  lib.rs  mock.rs  testing_constants.rs  testing_utils.rs  tests.rs  types.rs
pallets/fee/: Cargo.toml  README.md
pallets/fee/src/: benchmarking.rs  default_weights.rs  ext.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/issue/: Cargo.toml  README.md
pallets/issue/rpc/: Cargo.toml
pallets/issue/src/: benchmarking.rs  default_weights.rs  ext.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/nomination/: Cargo.toml  README.md
pallets/nomination/src/: benchmarking.rs  default_weights.rs  ext.rs  lib.rs  mock.rs  tests.rs
pallets/oracle/: Cargo.toml  README.md
pallets/oracle/rpc/: Cargo.toml
pallets/oracle/src/: benchmarking.rs  default_weights.rs  dia.rs  ext.rs  lib.rs  mock.rs  oracle_api.rs  oracle_mock.rs  tests.rs  types.rs
pallets/pooled-rewards/: Cargo.toml
pallets/pooled-rewards/src/: lib.rs  mock.rs  tests.rs
pallets/redeem/: Cargo.toml  README.md
pallets/redeem/rpc/: Cargo.toml
pallets/redeem/src/: benchmarking.rs  default_weights.rs  ext.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/replace/: Cargo.toml  README.md
pallets/replace/rpc/: Cargo.toml
pallets/replace/src/: benchmarking.rs  default_weights.rs  ext.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/reward/: Cargo.toml
pallets/reward-distribution/: Cargo.toml  README.md
pallets/reward-distribution/src/: benchmarking.rs  default_weights.rs  ext.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/reward/src/: lib.rs  mock.rs  tests.rs
pallets/security/: Cargo.toml  README.md
pallets/security/src/: default_weights.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/spacewalk/: Cargo.toml  README.md
pallets/spacewalk/src/: address_conv.rs  balance_conv.rs  currency.rs  currency_conv.rs  horizon.rs  lib.rs  mock.rs  tests.rs
pallets/staking/: Cargo.toml
pallets/staking/src/: lib.rs  mock.rs  tests.rs
pallets/stellar-relay/: Cargo.toml  README.md
pallets/stellar-relay/src/: benchmarking.rs  default_genesis.rs  default_weights.rs  lib.rs  mock.rs  testing_utils.rs  tests.rs  traits.rs  types.rs  validation.rs  weights.rs
pallets/stellar-transactions/: Cargo.toml
pallets/stellar-transactions/src/: lib.rs
pallets/vault-registry/: Cargo.toml  README.md
pallets/vault-registry/rpc/: Cargo.toml
pallets/vault-registry/src/: benchmarking.rs  default_weights.rs  ext.rs  helper.rs  lib.rs  mock.rs  pool_staking_manager.rs  tests.rs  types.rs
primitives/: Cargo.toml
primitives/src/: lib.rs  tests.rs
primitives/src/currency/: mod.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
(+280 files in other folders)
