[workspace]
resolver = "2"
members = [
    "clients/runner",
    "clients/runtime",
    "clients/runtime/client",
    "clients/vault",
    "clients/wallet",
    "clients/service",
    "clients/stellar-relay-lib",
    "pallets/clients-info",
    "pallets/currency",
    "pallets/fee",
    "pallets/nomination",
    "pallets/oracle",
    "pallets/pooled-rewards",
    "pallets/reward-distribution",
    "pallets/staking",
    "pallets/stellar-relay",
    "pallets/vault-registry",
    "primitives",
    "pallets/*/rpc",
    "testchain/node",
    "testchain/runtime/mainnet",
    "testchain/runtime/testnet",
]
[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
# Sacrifice compile speed for execution speed by using optimization flags:
# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1


[patch."https://github.com/paritytech/substrate"]
frame-support = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
frame-support-procedural = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
frame-support-procedural-tools = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
frame-system = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-core = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-externalities = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-io = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-runtime = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-std = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-storage = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-wasm-interface = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }

frame-benchmarking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
frame-benchmarking-cli = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
frame-executive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
frame-system-benchmarking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
pallet-aura = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
pallet-authorship = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
pallet-balances = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
pallet-grandpa = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
pallet-session = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
pallet-sudo = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
pallet-timestamp = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
pallet-transaction-payment = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-allocator = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-basic-authorship = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-block-builder = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-chain-spec = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-chain-spec-derive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-cli = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-client-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-client-db = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-consensus = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-consensus-aura = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-consensus-babe = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-consensus-epochs = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-consensus-slots = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-executor = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-executor-common = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-executor-wasmi = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-executor-wasmtime = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-consensus-grandpa = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-informant = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-keystore = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-network = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-network-bitswap = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-network-common = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-network-gossip = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-network-light = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-network-sync = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-network-transactions = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-offchain = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-peerset = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-proposer-metrics = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-rpc-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-rpc-server = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-rpc-spec-v2 = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-service = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-state-db = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-sysinfo = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-telemetry = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-tracing = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-tracing-proc-macro = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-transaction-pool = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-transaction-pool-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sc-utils = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-api-proc-macro = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-application-crypto = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-arithmetic = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-block-builder = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-blockchain = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-consensus = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-consensus-aura = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-consensus-babe = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-consensus-slots = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-core-hashing = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-core-hashing-proc-macro = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-database = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-debug-derive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-consensus-grandpa = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-inherents = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-keyring = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-keystore = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-maybe-compressed-blob = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-offchain = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-panic-handler = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-runtime-interface = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-session = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-staking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-state-machine = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-tracing = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-transaction-pool = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-transaction-storage-proof = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-trie = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-timestamp = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-version = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-version-proc-macro = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-weights = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
substrate-build-script-utils = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
substrate-wasm-builder = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }

[patch."https://github.com/paritytech/polkadot"]
xcm = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.42" }

[patch.crates-io]
sp-core = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }
sp-runtime = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.42" }